add Settings service

--- a/TaxCalculator/appsettings.json
+++ b/TaxCalculator/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiSettings": {
+    "ApiUrl": "https://localhost:44352/"
+  }
 }
