--- a/TaxCalculator/package.json
+++ b/TaxCalculator/package.json
@@ -13,6 +13,7 @@
     "toastr": "^2.1.4"
   },
   "devDependencies": {
+    "eslint": "^8.54.0",
     "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5"
   }
