--- a/TaxCalculator/appsettings.json
+++ b/TaxCalculator/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ApiSettings": {
-    "ApiUrl": "https://localhost:44352/"
+    "ApiUrl": "https://localhost:44352",
+    "AppOrigin": "https://localhost:44301"
   }
 }
