Major refactoring and restructuring of the solution. Moved and renamed models and services across projects to improve separation of concerns. Added new projects for services and repositories.

--- a/TaxCalculator.Api/TaxCalculator.WebApi.csproj
+++ b/TaxCalculator.Api/TaxCalculator.WebApi.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <InvariantGlobalization>true</InvariantGlobalization>
+    <InvariantGlobalization>false</InvariantGlobalization>
     <UserSecretsId>da1c3abf-bae6-42a2-9318-1ee6c4dd7e64</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <ProjectReference Include="..\TaxCalculator.Services\TaxCalculator.Services.csproj" />
   </ItemGroup>
 
 </Project>
